--- a/sem_3_bidniituhai.html
+++ b/sem_3_bidniituhai.html
@@ -12,7 +12,7 @@
     <nav>
         <h3><i class="fa-solid fa-mug-hot"></i>Кофе <span>шоф</span></h3>
         <ul>
-            <li><a href="sem_3.html" class="active">Нүүр</a></li>
+            <li><a href="index.html" class="active">Нүүр</a></li>
             <li><a href="sem_3_bidniituhai.html">Бидний тухай</a></li>
             <li><a href="sem_3_manaitses.html">Манай цэс</a></li>
             <li><a href="sem_3_holboobarih.html">Холбоо барих</a></li>
