--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Кофе шоф</title>
-    <link rel="stylesheet" href="CSS/sem_3.css">
+    <link rel="stylesheet" href="CSS/index.css">
     <script src="https://kit.fontawesome.com/6a070a81bc.js" crossorigin="anonymous"></script>
 </head>
 <body class="roboto-slab-body">
@@ -12,7 +12,7 @@
     <nav>
         <h3><i class="fa-solid fa-mug-hot"></i>Кофе <span>шоф</span></h3>
         <ul>
-            <li><a href="sem_3.html" class="active">Нүүр</a></li>
+            <li><a href="index.html" class="active">Нүүр</a></li>
             <li><a href="sem_3_bidniituhai.html">Бидний тухай</a></li>
             <li><a href="sem_3_manaitses.html">Манай цэс</a></li>
             <li><a href="sem_3_holboobarih.html">Холбоо барих</a></li>
