--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="sec1_img">
-        <img src="../Sem/sem3-images/home-image-1.jpg" alt="Coffee">
+        <img src="/sem3-images/home-image-1.jpg" alt="Coffee">
     </div>
 </section>
 
