--- a/html/sem_3_bidniituhai.html
+++ b/html/sem_3_bidniituhai.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Бидний тухай</title>
-    <link rel="stylesheet" href="CSS/sem_3_bidniituhai.css">
+    <link rel="stylesheet" href="../CSS/sem_3_bidniituhai.css">
     <script src="https://kit.fontawesome.com/6a070a81bc.js" crossorigin="anonymous"></script>
 </head>
 <body class="roboto-slab-body">
@@ -21,7 +21,7 @@
 
 <section id="bt">
     <div class="sec1_img">
-        <img src="../Sem/sem3-images/port-1.jpg" alt="coffee">
+        <img src="../sem3-images/port-1.jpg" alt="coffee">
     </div>
 
     <div class="about-text">
