--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Кофе шоф</title>
-    <link rel="stylesheet" href="../CSS/index.css">
+    <link rel="stylesheet" href="CSS/index.css">
     <script src="https://kit.fontawesome.com/6a070a81bc.js" crossorigin="anonymous"></script>
 </head>
 <body class="roboto-slab-body">
@@ -34,7 +34,7 @@
     </div>
 
     <div class="sec1_img">
-        <img src="../sem3-images/home-image-1.jpg" alt="Coffee">
+        <img src="sem3-images/home-image-1.jpg" alt="Coffee">
     </div>
 </section>
 
