--- a/sem_3_manaitses.html
+++ b/sem_3_manaitses.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Манай цэс</title>
-    <link rel="stylesheet" href="../CSS/sem_3_manaitses.css">
+    <link rel="stylesheet" href="CSS/sem_3_manaitses.css">
     <script src="https://kit.fontawesome.com/6a070a81bc.js" crossorigin="anonymous"></script>
 </head>
 <body class="roboto-slab-body">
@@ -22,7 +22,7 @@
         <div class="container">
             
             <div class="left">
-                <img src="/sem3-images/port-1.jpg" alt="Кофе">
+                <img src="sem3-images/port-1.jpg" alt="Кофе">
             </div>
 
             <div class="right">
