--- a/sem_3_holboobarih.html
+++ b/sem_3_holboobarih.html
@@ -27,7 +27,7 @@
                 <p>Мяг - Пүр: 9:00 - 17:00</p>
                 <p>Ба: 9:00 - 19:00 / Бя: 8:00 - 16:00</p>
                 <p>Ня - Дол: Амарна</p>
-                <p>И-мэйл: <a href="mailto:contacts@coffeeshop.mn">contacts@coffeeshop.mn</a></p>
+                <p>И-мэйл: <a href="mailto:Ganbae@coffeeshop.mn">contacts@coffeeshop.mn</a></p>
 
                 <form>
                     <input type="text" name="name" placeholder="Нэр" required>
